# rules_oci

./: MODULE.bazel  WORKSPACE
examples/env/: BUILD.bazel
oci/: dependencies.bzl
oci/private/: image.bzl  pull.bzl  tarball.bzl  tarball.sh.tpl  versions.bzl
