load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//oci:defs.bzl", "oci_image")

pkg_tar(
    name = "app",
    srcs = ["test.bash"],
)

oci_image(
    name = "image.no_env",
    base = "@ubuntu",
    cmd = ["test.sh"],
    tars = ["app.tar"],
)

# Use the value of --embed_label under --stamp, otherwise use a deterministic constant
# value to ensure cache hits for actions that depend on this.
expand_template(
    name = "env",
    out = "env.txt",
    stamp_substitutions = {"sha256:": "BUILD_VERSION={{BUILD_EMBED_LABEL}}\n#"},
    substitutions = {"EMBED_LABEL": "1.2.3"},
    template = ":image.no_env.digest",
)

oci_image(
    name = "image",
    base = "@ubuntu",
    cmd = ["test.sh"],
    env = ":env",
    tars = ["app.tar"],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
